syntax = "proto3";
package b9lab.checkers.checkers;

option go_package = "github.com/b9lab/checkers/x/checkers/types";

message PlayerInfo {
    string index = 1;
    uint64 wonCount = 2;
    uint64 lostCount = 3;
    uint64 forfeitedCount = 4;
}

